CTPA-782 get /cases by IAC etc
